First draft for an about me page

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
         <article>
         <h2>&#128587; About Me</h2>
         <ul>
-            <li>I am originally from [...]</li>
-            <li>I speak [...]</li>
-            <li>I am currently learning how to use GitHub because [...]</li>
-            <li>I like to [...]</li>
+            <li>I am originally from Bosnia</li>
+            <li>I speak Croatian, Swedish, English and some Italian.</li>
+            <li>I am currently learning how to use GitHub because I'm going to digitalize an artifact and publish a website on GitHub.</li>
+            <li>I like to do many things, like crafts, sport and travel..</li>
         </ul>
         </article>
         <article>
         <h2>&#127979; About My Studies </h2>
         <ul>
-            <li>I study [...]</li>
+            <li>I study at Bibliotekshögskolan in Borås.</li>
             <li>I can code in:
                 <ul>
-                    <li><code>[...]</code></li>
-                    <li><code>[...]</code></li>
-                    <li><code>[...]</code></li>
+                    <li><code>HTML</code></li>
+                    <li><code>css</code></li>
+                    <li><code>CML</code></li>
                 </ul>
             </li>
         </ul>
@@ -37,12 +37,13 @@
         <article>
         <h2>&#127829; About Pizza</h2>
         <ul>
-            <li>My favourite pizza is [...]</li>
+            <li>My favourite pizza is Marinara with extra garlic and extra olive oil.</li>
             <li>Its toppings include:
                 <ul>
-                    <li>[...]</li>
-                    <li>[...]</li>
-                    <li>[...]</li>
+                    <li>A simple tomato sauce without salt</li>
+                    <li>Garlic</li>
+                    <li>Oregano</li>
+                    <li>Olive oil</li>
                 </ul>
             </li>
         </ul>
