--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <article>
-        <h1>&#128075; Hi! I'm [...]</h1>
+        <h1>&#128075; Hi! I'm Ana</h1>
         <p>
             Welcome to my GitHub account. 
         </p>
