Fixed spelling for XML

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <ul>
                     <li><code>HTML</code></li>
                     <li><code>css</code></li>
-                    <li><code>CML</code></li>
+                    <li><code>XML</code></li>
                 </ul>
             </li>
         </ul>
